# HW7

./: Application.py  Main.py  alcbase7.db  models.py  my_select.py  seed.py
ContactsBook/: hw14sql.db  main.py  pyproject.toml  schemas.py
ContactsBook/database/: db.py  models.py
ContactsBook/docs/: conf.py
ContactsBook/docs/_build_alabaster/doctrees/: environment.pickle  index.doctree
ContactsBook/docs/_build_alabaster/html/: genindex.html  index.html  objects.inv  py-modindex.html  search.html
ContactsBook/docs/_build_alabaster/html/_sources/: index.rst.txt
ContactsBook/docs/_build_nature/doctrees/: environment.pickle
ContactsBook/docs/_build_nature/html/: genindex.html  index.html  py-modindex.html  search.html  searchindex.js
ContactsBook/repository/: contacts.py  users.py
ContactsBook/routes/: auth.py  contacts.py  users.py
ContactsBook/services/: auth.py  config.py  email.py
ContactsBook/services/templates/: email_template.html
ContactsBook/test/: conftest.py  test_route_auth.py
ContactsBook/test/test_repository/: test_contacts.py  test_users.py
clean_folder/: Setup.py
clean_folder/clean_folder/: clean.py
